[tool.poetry]
name = "university-project"
version = "0.1.0"
description = "Project for managing university database using SQLite and Faker"
authors = ["Andriy <AndriySydor91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
